--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,7 @@ header{
     background-attachment: fixed;
     min-height: 500px;
 
+    align-content: center;
     text-align: left;
     padding: 100px;
 }
@@ -75,13 +76,58 @@ header h2{
     display: inline-block;
     padding: 30px;
     align-content: center;
+    vertical-align: middle;
 }
 
 .sec_contacto div i{
     color: #efab55;
+    font-size: 20px;
 }
 
-.sec_contacto div span{
+.sec_contacto div a{
     font-weight: 200;
+    text-decoration: none;
 }
 /* Fin sección de contacto. */
+
+
+/* Sección de acerca de. */
+.sec_acercade{
+    text-align: center;
+    background-color: #3d3f4c;
+}
+
+.sec_acercade h3{
+    padding: 20px;
+    font-size: 2em;
+    font-weight: 600;
+}
+
+.sec_acercade div{
+    width: 350px;
+    height: auto;
+    padding: 30px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.sec_acercade div img{
+    width: 300px;
+    height: auto;
+    border-radius: 10%;
+}
+
+.sec_acercade div p{
+    text-align: left;
+}
+/* Fin sección de acerca de. */
+
+
+/* Sección experiencia profesional. */
+.sec_experiencia{
+    background-color: transparent;
+    width: 100%;
+    height: 400px;
+}
+
+/* Fin sección experiencia profesional. */
