hero section start

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,233 +5,170 @@
 */
 
 /* Configuraciones generales. */
-body *{
-    border: 0;
+*{
     margin: 0;
     padding: 0;
-    color: #181923;
-    font-family: "Poppins", sans-serif;
+}
+
+:root{
+    --color-1: #FAFAFA;
+    --color-2: #EEEEEE;
+    --color-3: #BDBDBD;
+    --dark-color: #212121;
+}
+
+body{
+    min-height: 100vh;
+    font-family: "Poppins", "Orbitron", sans-serif;
 }
 
 /* Fin configuraciones generales. */
 
 
-/* Navegación */
+
+/* Navbar. */
 nav{
-    width: 100%;
-    text-align: center;
-
+    height: 60px;
+    background-color: var(--color-1);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
-} 
-
-nav a img{
-    width: 50px;
-    height: auto;
-    padding: 10px;
 }
 
 nav ul{
-    margin-right: 10px;
+    width: 100%;
     list-style: none;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
- 
-}
-
-nav ul li a{
-    text-decoration: none;
-    padding: 10px;
-}
-
-nav ul li a:hover{
-    color: #EE6071;
-}
-
-/* Botón sandwich. */
-.menu-icon{
-    display: none;
-    cursor: pointer;
-}
-
-.menu-icon .bar{
-    width: 25px;
-    height: 3px;
-    background-color: #EE6071;
-    margin: 5px 0;
-    transition: 0.4s;
-}
-
-/* Media Query para pantallas de móviles. */
-@media(max-width: 800px){
-
-    nav{
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-    } 
-
-    nav ul{
-        display: none;
-        flex-direction: column;
-        width: 100%;
-    }
-
-    .menu-icon{
-        display: block;
-        padding: 10px;
-    }
-
-    nav ul li{
-        display: block;
-        text-align: center;
-        padding: 10px 0;
-    }
-    
-    nav ul.show{
-        display: flex;
-       
-    }
-  
-}
-/* Fin botón sandwich. */
-
-/* Fin navegación */
-
-
-/* Sección de héroe */
-header{
-    background-image: url("../img/hero_bg.webp");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    min-height: 700px;
-
-    align-content: center;
-    text-align: center;
-
-    display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
 }
 
-/* Efecto Glassmorfismo. */
-.glass-card {
-    width: 60%;
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 16px;
+nav li{
+    height: 50px;
+}
 
-    padding: 2rem;
-    text-align: center;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    color: #fff;
+nav ul li a{
+    height: 100%;
+    padding: 0 20px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    color: var(--dark-color);
+
+}
+
+nav a:hover{
+    color: var(--color-3)
 }
 
 
-header h1, h2{
-    background-color: transparent;
-}
-
-header h1{
-    font-size: 40px;
-    font-weight:600;
-    margin-left: 20px;
-    color: #EDF2F4;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-header h2{
-    margin-top: 20px;
-    font-size: 20px;
-    font-weight: 700;
-    color: #EE6071;
-    margin-left: 20px;
-}
-
-header img{
-    width: 30%;
+nav ul li a img{
+    width: 50px;
     height: auto;
-    border-radius: 100%;
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
+}
+
+nav ul li:first-child{
+    margin-right: auto;
+}
+
+.sidebar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 50%;
+    z-index: 999;
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    display: none;
+}
+
+.sidebar li{
+    width: 100%;
+}
+
+.sidebar a{
+    width: 100%;
+}
+
+.menu-button{
+    display: none;
+}
+
+@media (max-width: 800px) {
+
+    .hideOnMobile{
+        display: none;
+    }
+
+    .menu-button{
+        display: block;
+    }
     
 }
-/* Fin sección de héroe */
 
+@media (max-width: 400px) {
 
-/* Sección de contacto. */
-.sec_contacto{
-    text-align: center;
-    font-size: 1em;
+    .sidebar{
+        width: 100%;
+    }
+    
 }
 
-.sec_contacto div{
-    width: 400px;
-    height: 40px;
-    display: inline-block;
-    padding: 30px;
-    align-content: center;
-    vertical-align: middle;
-}
-
-.sec_contacto div i{
-    color: #EE6071;
-    font-size: 20px;
-}
-
-.sec_contacto div a{
-    font-weight: 200;
-    text-decoration: none;
-}
-/* Fin sección de contacto. */
+/* End Navbar. */
 
 
-/* Sección de acerca de. */
-.sec_acercade{
-    text-align: center;
-
-    background: linear-gradient(135deg, #ebf4f5, #b5c6e0);
-}
-
-.sec_acercade h3{
-    padding: 20px;
-    font-size: 2em;
-    font-weight: 600;
-}
-
-.sec_acercade div{
-    width: 350px;
-    height: auto;
-    padding: 30px;
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.sec_acercade div img{
-    width: 300px;
-    height: auto;
-    border-radius: 10%;
-}
-
-.sec_acercade div p{
-    text-align: left;
-    font-size: 16pt;
-    font-weight: 200;
-}
-/* Fin sección de acerca de. */
-
-
-/* Sección experiencia profesional. */
-.sec_experiencia{
-    background-color: transparent;
+/* Hero section. */
+#hero-section{
     width: 100%;
-    height: 400px;
+    min-height: 700px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    font-family: "Orbitron", sans-serif;
+    background-color: var(--color-1);
 }
 
-/* Fin sección experiencia profesional. */
+#hero-section p{
+    font-size: 2em;
+    color: var(--dark-color);
+    font-weight: 700;
+}
+
+.container_title{
+    display: flex;
+    justify-content: center;
+}
+
+#hero-section h1{
+    font-size: 3em;
+    color: var(--dark-color);
+    padding: 0 20px;
+}
+
+.centrar_contenido{
+    display: flex;
+    justify-content: center;
+}
+
+#hero-section i{
+    color: var(--dark-color);
+}
+/* End hero section. */
+
+
+/* About. */
+#about{
+    width: 100%;
+    min-height: 400px;
+    background-color: var(--color-2);
+
+}
