--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,6 @@ nav ul li:first-child{
     }
     
 }
-
 /* End Navbar. */
 
 
@@ -153,24 +152,25 @@ nav ul li:first-child{
 }
 
 .fadein-h{
-    animation: fadeIn 0.5s ease-in-out;
+    animation: fadeIn 0.5s ease-in;
 }
 .fadein-e{
-    animation: fadeIn 1s ease-in-out;
+    animation: fadeIn 1s ease-in;
 }
 .fadein-l{
-    animation: fadeIn 1.5s ease-in-out;
+    animation: fadeIn 1.5s ease-in;
 }
 .fadein-l2{
-    animation: fadeIn 2s ease-in-out;
+    animation: fadeIn 2s ease-in;
 }
 .fadein-o{
-    animation: fadeIn 2.5s ease-in-out;
+    animation: fadeIn 2.5s ease-in;
 }
-.fadein-_{
-    animation: fadeIn 3s ease-in-out;
-    animation-iteration-count: infinite;
+
+.underscore_{
+    animation: fadeIn 4s linear, fadeIn 1s ease-in infinite;
 }
+
 /* Fin animación: HELLO_  */
 
 
@@ -182,10 +182,14 @@ nav ul li:first-child{
 }
 
 #hero-section h1{
-    font-size: 3em;
+    font-size: 2em;
     color: var(--dark-color);
-    padding: 0 20px;
+    padding: 0 30px;
     text-align: center;
+}
+
+.title-web{
+    font-size: 20px;
 }
 
 #hero-section i{
