--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,28 +6,29 @@
 
 
 /* Configuraciones generales. */
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-:root{
+:root {
     --color-1: #FAFAFA;
     --color-2: #EEEEEE;
     --color-3: #BDBDBD;
     --dark-color: #212121;
 }
 
-body{
+body {
     min-height: 100vh;
     font-family: "Poppins", "Orbitron", sans-serif;
 }
+
 /* Fin configuraciones generales. */
 
 
 
 /* Navbar. */
-nav{
+nav {
     height: 60px;
     background-color: var(--color-1);
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
@@ -36,7 +37,7 @@ nav{
     align-items: center;
 }
 
-nav ul{
+nav ul {
     width: 100%;
     list-style: none;
     display: flex;
@@ -45,11 +46,11 @@ nav ul{
     align-items: center;
 }
 
-nav li{
+nav li {
     height: 50px;
 }
 
-nav ul li a{
+nav ul li a {
     height: 100%;
     padding: 0 20px;
     text-decoration: none;
@@ -59,21 +60,21 @@ nav ul li a{
 
 }
 
-nav a:hover{
+nav a:hover {
     color: var(--color-3)
 }
 
 
-nav ul li a img{
+nav ul li a img {
     width: 50px;
     height: auto;
 }
 
-nav ul li:first-child{
+nav ul li:first-child {
     margin-right: auto;
 }
 
-.sidebar{
+.sidebar {
     position: fixed;
     top: 0;
     right: 0;
@@ -90,41 +91,42 @@ nav ul li:first-child{
     display: none;
 }
 
-.sidebar li{
+.sidebar li {
     width: 100%;
 }
 
-.sidebar a{
+.sidebar a {
     width: 100%;
 }
 
-.menu-button{
+.menu-button {
     display: none;
 }
 
 @media (max-width: 800px) {
 
-    .hideOnMobile{
+    .hideOnMobile {
         display: none;
     }
 
-    .menu-button{
+    .menu-button {
         display: block;
     }
 }
 
 @media (max-width: 400px) {
 
-    .sidebar{
+    .sidebar {
         width: 100%;
     }
-    
+
 }
+
 /* End Navbar. */
 
 
 /* Hero section. */
-#hero-section{
+#hero-section {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -135,71 +137,114 @@ nav ul li:first-child{
     background-color: var(--color-1);
 }
 
-#hero-section span{
+#hero-section .greeting {
     font-size: 2.5em;
     color: var(--dark-color);
     font-weight: 700;
 }
 
 /* Animación: HELLO_  */
-@keyframes fadeIn{
-    from{
+@keyframes fadeIn {
+    from {
         opacity: 0;
     }
-    to{
+
+    to {
         opacity: 1;
     }
 }
 
-.fadein-h{
+.fadein-h {
     animation: fadeIn 0.5s ease-in;
 }
-.fadein-e{
+
+.fadein-e {
     animation: fadeIn 1s ease-in;
 }
-.fadein-l{
+
+.fadein-l {
     animation: fadeIn 1.5s ease-in;
 }
-.fadein-l2{
+
+.fadein-l2 {
     animation: fadeIn 2s ease-in;
 }
-.fadein-o{
+
+.fadein-o {
     animation: fadeIn 2.5s ease-in;
 }
 
-.underscore_{
+.underscore_ {
     animation: fadeIn 4s linear, fadeIn 1s ease-in infinite;
 }
 
 /* Fin animación: HELLO_  */
 
 
-.container_title{
+.container_title {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    padding: 0 30px;
 }
 
-#hero-section h1{
-    font-size: 2em;
+
+#hero-section .welcome{
+    font-size: 60pt;
+    font-weight: 800;
     color: var(--dark-color);
-    padding: 0 30px;
     text-align: center;
 }
 
-.title-web{
-    font-size: 20px;
+/* Animation for Welcome. */
+@keyframes slideUp {
+    from {
+        transform: translateY(100%);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
-#hero-section i{
+.animation--slideup {
+    animation: slideUp 2s ease-in-out;
+}
+
+/* Animation: Welcome. */
+
+
+/* Animation for to. */
+@keyframes slideDown {
+    from {
+        transform: translateY(-100%);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.animation--slidedown {
+    animation: slideDown 2s ease-in-out;
+}
+
+
+
+#hero-section i {
     color: var(--dark-color);
 }
+
 /* End hero section. */
 
 
 /* About. */
-#about{
+#about {
     width: 100%;
     min-height: 500px;
     background-color: var(--color-2);
@@ -207,37 +252,37 @@ nav ul li:first-child{
     flex-direction: column;
 }
 
-#about article{
+#about article {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
-#about h2{
+#about h2 {
     font-family: "Orbitron", sans-serif;
     padding: 10px;
     margin-top: 4em;
     color: var(--dark-color);
 }
 
-.linea-about{
+.linea-about {
     width: 100px;
     padding: 10px;
 }
 
-.contenedor-texto{
+.contenedor-texto {
     width: 500px;
 }
 
-#about p{
+#about p {
     font-size: 20px;
     padding: 10px;
     margin-top: 1em;
     color: var(--dark-color);
 }
 
-#about img{
+#about img {
     margin-top: 4em;
     width: 300px;
     height: auto;
