--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,23 +155,23 @@ nav ul li:first-child {
 }
 
 .fadein-h {
-    animation: fadeIn 0.5s ease-in;
-}
-
-.fadein-e {
     animation: fadeIn 1s ease-in;
 }
 
-.fadein-l {
+.fadein-e {
     animation: fadeIn 1.5s ease-in;
 }
 
-.fadein-l2 {
+.fadein-l {
     animation: fadeIn 2s ease-in;
 }
 
-.fadein-o {
+.fadein-l2 {
     animation: fadeIn 2.5s ease-in;
+}
+
+.fadein-o {
+    animation: fadeIn 3s ease-in;
 }
 
 .underscore_ {
@@ -211,7 +211,7 @@ nav ul li:first-child {
 }
 
 .animation--slideup {
-    animation: slideUp 2s ease-in-out;
+    animation: slideUp 2.5s ease-in-out;
 }
 
 /* Animation: Welcome. */
@@ -231,7 +231,7 @@ nav ul li:first-child {
 }
 
 .animation--slidedown {
-    animation: slideDown 2s ease-in-out;
+    animation: slideDown 2.5s ease-in-out;
 }
 
 
@@ -288,3 +288,68 @@ nav ul li:first-child {
     height: auto;
     border-radius: 100%;
 }
+/* End About. */
+
+
+/* Skills section. */
+#skills{
+    width: 100%;
+    min-height: 500px;
+    background-color: var(--color-1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.line-top-skills{
+    width: 120px;
+    padding: 10px;
+}
+
+#skills h2{
+    font-family: "Orbitron", sans-serif;
+    padding: 4em;
+    color: var(--dark-color);
+}
+
+.line-bottom-skills{
+    width: 120px;
+    padding: 10px;
+}
+/* Skills section. */
+
+
+/* Footer. */
+footer{
+    background-color: #212121;
+    color: #FAFAFA;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    text-align: center;
+    width: 100%;
+    height: auto;
+}
+
+footer img{
+    width: 70px;
+    height: auto;
+    padding: 2em;
+}
+
+.icons-social i{
+    color: #FAFAFA;
+    padding: 1em;
+}
+
+.text-footer{
+    padding: 3em;
+}
+
+.text-footer p{
+    font-size: 1em;
+    font-weight: 200;
+}
+
+/* End footer. */
