--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,6 +284,7 @@ nav ul li:first-child {
 
 #about img {
     margin-top: 4em;
+    margin-bottom: 3em;
     width: 300px;
     height: auto;
     border-radius: 100%;
@@ -318,6 +319,60 @@ nav ul li:first-child {
     padding: 10px;
 }
 /* Skills section. */
+
+
+/* Contact section. */
+#contact{
+    width: 100%;
+    min-height: 500px;
+    background-color: var(--color-2);
+    color: var(--dark-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+#contact article {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+#contact .title-contact{
+    margin-left: 13em;
+}
+
+#contact h2{
+    font-family: "Orbitron", sans-serif;
+    padding: 10px;
+    margin-top: 4em;
+}
+
+#contact .line-contact{
+    width: 130px;
+    padding: 10px;
+}
+
+#contact article p{
+    font-size: 20px;
+    padding: 10px;
+    margin-top: 1em;
+    margin-bottom: 3em;
+    color: var(--dark-color);
+}
+
+#contact .text-contact{
+    text-align: center;
+}
+
+#contact i{
+    color: var(--dark-color);
+}
+
+
+/* End contact section. */
 
 
 /* Footer. */
