--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,6 +277,7 @@ nav ul li:first-child {
 
 #about p {
     font-size: 20px;
+    font-weight: 300;
     padding: 10px;
     margin-top: 1em;
     color: var(--dark-color);
@@ -347,7 +348,6 @@ nav ul li:first-child {
 #contact h2{
     font-family: "Orbitron", sans-serif;
     padding: 10px;
-    margin-top: 4em;
 }
 
 #contact .line-contact{
@@ -358,6 +358,7 @@ nav ul li:first-child {
 #contact article p{
     font-size: 20px;
     padding: 10px;
+    font-weight: 300;
     margin-top: 1em;
     margin-bottom: 3em;
     color: var(--dark-color);
