--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,27 @@ body {
 /* Fin configuraciones generales. */
 
 
+/* Animación solo disponible para Google Chrome. */
+.scroll--watcher{
+    height: 10px;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    background-color: rgb(192, 192, 192);
+    color: #000000;
+    width: 100%;
+    scale: 0;
+    animation: scroll-watcher linear;
+    animation-timeline: scroll();
+}
+
+@keyframes scroll-watcher{
+    to{ 
+        scale: 1 1; 
+        -moz-scale: 1 1;
+    }
+}
+
 
 /* Navbar. */
 nav {
