--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,16 @@ body {
 /* Fin configuraciones generales. */
 
 
+/* Navbar. */
+.glassmorphism-navbar {
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    -webkit-backdrop-filter: blur(10px);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+/* Navbar. */
 
 
 
@@ -46,7 +56,7 @@ body {
     font-weight: 700;
 }
 
-/* Animación: HELLO_  */
+/* Animación para HOLA_  */
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -61,7 +71,7 @@ body {
     animation: fadeIn 1s ease-in;
 }
 
-.fadein-e {
+.fadein-o {
     animation: fadeIn 1.5s ease-in;
 }
 
@@ -69,18 +79,14 @@ body {
     animation: fadeIn 2s ease-in;
 }
 
-.fadein-l2 {
+.fadein-a {
     animation: fadeIn 2.5s ease-in;
-}
-
-.fadein-o {
-    animation: fadeIn 3s ease-in;
 }
 
 .underscore_ {
     animation: fadeIn 4s linear, fadeIn 1s ease-in infinite;
 }
-/* Fin animación: HELLO_  */
+/* Fin animación: HOLA_  */
 
 
 .container_title {
@@ -98,7 +104,7 @@ body {
     text-align: center;
 }
 
-/* Animation for Welcome. */
+/* Animación H1 */
 @keyframes slideUp {
     from {
         transform: translateY(100%);
@@ -114,10 +120,7 @@ body {
 .animation--slideup {
     animation: slideUp 2.5s ease-in-out;
 }
-/* Animation: Welcome. */
 
-
-/* Animation for "to". */
 @keyframes slideDown {
     from {
         transform: translateY(-100%);
@@ -133,13 +136,12 @@ body {
 .animation--slidedown {
     animation: slideDown 2.5s ease-in-out;
 }
+/* Fin animación H1. */
 
 #hero-section i {
     color: var(--dark-color);
 }
-
 /* End hero section. */
-
 
 
 
@@ -176,3 +178,75 @@ footer img{
     font-weight: 200;
 }
 /* End footer. */
+
+
+/* Contenedor principal. */
+.contenedor {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+
+/* xs */
+@media (max-width: 475px) {
+    .contenedor {
+        min-width: 475px;
+    }
+
+    #hero-section {
+        justify-content: space-evenly;
+    }
+
+    #hero-section .welcome{
+        font-size: 50pt;
+    }
+}
+
+/* sm. */
+@media (max-width: 640px) {
+    .contenedor {
+        min-width: 640px;
+    }
+
+    #hero-section {
+        justify-content: space-evenly;
+    }
+
+    #hero-section .welcome{
+        font-size: 50pt;
+    }
+}
+
+/* md. */
+@media (max-width: 768px) {
+    .contenedor {
+        min-width: 768px;
+    }
+    
+    #hero-section {
+        justify-content: space-evenly;
+    }
+}
+
+/* lg. */
+@media (max-width: 1024px) {
+    .contenedor {
+        min-width: 1024px;
+    }
+}
+
+/* xl. */
+@media (max-width: 1280px) {
+    .contenedor {
+        min-width: 1280px;
+    }
+}
+
+/* 2xl. */
+@media (max-width: 1536px) {
+    .contenedor {
+        min-width: 1536px;
+    }
+}
