--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,11 +156,16 @@ body {
     background-attachment: fixed;
 }
 
-.main__header{
-    font-family: "Orbitron", sans-serif;
-    font-size: 40px;
+.main__header {
+    font-size: 20px;
     font-weight: 500;
-    padding: 0.3em 0;
+    display: inline;
+}
+
+.main__header--h2 {
+    font-size: 18px;
+    font-weight: 500;
+    display: inline;
 }
 
 /* About section. */
@@ -168,10 +173,16 @@ body {
 #about {
     height: 100vh;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
+.about__header {
+    font-family: "Orbitron", sans-serif;
+    padding: 0.5em 0;
+}
+
 
 .about__info {
 
@@ -202,9 +213,9 @@ body {
     padding: 1em 0;
 }
 
-.about__text,
-p {
+.about__text p {
     font-size: 18px;
+    display: inline;
 }
 
 .about__image img {
@@ -229,9 +240,10 @@ p {
     align-items: center;
 }
 
-.skills__text{
+.skills__text {
     padding: 1em 0;
 }
+
 .skills__header {
     font-family: "Orbitron", sans-serif;
     padding: 0.5em 0;
@@ -268,6 +280,130 @@ p {
     align-items: center;
     justify-content: center;
 }
+
+
+/* Works. */
+#works {
+    color: white;
+    background: rgba(0, 0, 0, 0.394);
+    width: 100%;
+    height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.works__text {
+    padding: 0.5em 0;
+}
+
+.works__text p{
+    font-size: 18px;
+}
+
+.works__header {
+    font-family: "Orbitron", sans-serif;
+    padding: 0.5em 0;
+}
+
+.card-glass {
+    background: rgba(255, 255, 255, 0.1);
+    /* Fondo blanco con transparencia */
+    backdrop-filter: blur(10px);
+    /* Efecto de desenfoque */
+    -webkit-backdrop-filter: blur(10px);
+    /* Efecto de desenfoque para Safari */
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    /* Borde blanco con transparencia */
+    border-radius: 15px;
+    /* Bordes redondeados */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    /* Sombra */
+    color: #fff;
+    /* Color del texto */
+}
+
+.rounded-top-img {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+.btn-glass {
+    background: rgba(255, 255, 255, 0.1);
+    /* Fondo blanco con transparencia */
+    backdrop-filter: blur(10px);
+    /* Efecto de desenfoque */
+    -webkit-backdrop-filter: blur(10px);
+    /* Efecto de desenfoque para Safari */
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    /* Borde blanco con transparencia */
+    color: #fff;
+    /* Color del texto */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    /* Sombra */
+    transition: background 0.3s, color 0.3s;
+    /* Transiciones suaves */
+}
+
+.btn-glass:hover {
+    background: rgba(255, 255, 255, 0.2);
+    /* Fondo blanco con mayor transparencia al pasar el ratón */
+    color: #fff;
+    /* Color del texto */
+}
+
+.card-text {
+    font-size: 16px;
+}
+/* Works. */
+
+
+
+/* Contact. */
+#contact {
+    color: white;
+    background: rgba(8, 8, 8, 0.7);
+    width: 100%;
+    height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.contact__header {
+    font-family: "Orbitron", sans-serif;
+    padding: 0.5em 0;
+}
+
+.contact__email {
+    color: #FAFAFA;
+}
+
+.pulsing-shadow {
+    color: #fff;
+    animation: pulse-shadow 2s infinite;
+}
+
+@keyframes pulse-shadow {
+    0% {
+        filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
+    }
+
+    50% {
+        filter: drop-shadow(0 0 20px rgba(255, 255, 255, 1));
+    }
+
+    100% {
+        filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
+    }
+}
+/* End Contact. */
 
 
 /* Footer. */
