--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -3,5 +3,14 @@ $color-2: #EEEEEE;
 $color-3: #BDBDBD;
 $dark-color: #212121;
 
-$font-primary-text: "Montserrat", sans-serif;
+$color-HTML: #E93E30;
+$color-js: #F7E018;
+$color-css: #299ed5;
+$color-vue: #67C770;
+$color-bootstrap: #563D7C;
+$color-sass: #cc6699;
+$color-git: #F05033;
+$color-github: #000000;
+
+$font-primary-text: "Nunito", sans-serif;
 $font-primary-header: "Orbitron", sans-serif;
