--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -1,3 +1,8 @@
+.nav-link {
+    color: $color-1;
+    font-size: 18px;
+}
+
 .glassmorphism-navbar {
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
