--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,4 +1,9 @@
 body {
     font-family: $font-primary-text;
-    color: $dark-color;
+    color: $color-1;
+    background-image: url(../img/back.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
