--- a/assets/scss/layout/_contact.scss
+++ b/assets/scss/layout/_contact.scss
@@ -1,7 +1,6 @@
-/* Contact. */
 .contact {
     color: white;
-    background: rgba(8, 8, 8, 0.7);
+    background: rgba(0, 0, 0, 0.85); 
     width: 100%;
     height: 100vh;
 
@@ -10,20 +9,20 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-}
 
-.contact__header {
-    font-family: "Orbitron", sans-serif;
-    padding: 0.5em 0;
-}
+    &__header {
+        font-family: "Orbitron", sans-serif;
+        padding: 0.5em 0;
+    }
 
-.contact__email {
-    color: #FAFAFA;
-}
+    &__email {
+        color: #FAFAFA;
 
-.pulsing-shadow {
-    color: #fff;
-    animation: pulse-shadow 2s infinite;
+        &--animation {
+            color: #fff;
+            animation: pulse-shadow 2s infinite;
+        }
+    }
 }
 
 @keyframes pulse-shadow {
@@ -39,4 +38,3 @@
         filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
     }
 }
-/* End Contact. */
