--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,69 +1,49 @@
-.hero-section {
+.header {
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     font-family: $font-primary-header;
-    background-color: $color-1;
-}
+    background: rgba(0, 0, 0, 0.85);
 
-.hero-section .greeting {
-    font-size: 2.5em;
-    color: $dark-color;
-    font-weight: 700;
-}
-
-/* Animación para HOLA_  */
-@keyframes fadeIn {
-    from {
-        opacity: 0;
+    &__title-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: $color-1;
+        flex-wrap: wrap;
+        padding: 0 30px;
     }
 
-    to {
-        opacity: 1;
+    &__welcome {
+        font-size: 70pt;
+        font-weight:900;
+        text-align: center;
+
+        &--slideup {
+            animation: slideUp 2.5s ease-in-out;
+        }
+
+        &--slidedown {
+            animation: slideDown 2.5s ease-in-out;
+        }
+
+        &--animated-text::after {
+            content: 'A';
+            animation: changeText 4s ease-in-out infinite;
+            opacity: 1;
+            transition: opacity 4s ease-in-out;
+        }
+
+        &--fadein {
+            animation: fadeIn 4s linear, fadeIn 1s ease-in infinite;
+        }
+
     }
 }
 
-.fadein-h {
-    animation: fadeIn 1s ease-in;
-}
-
-.fadein-o {
-    animation: fadeIn 1.5s ease-in;
-}
-
-.fadein-l {
-    animation: fadeIn 2s ease-in;
-}
-
-.fadein-a {
-    animation: fadeIn 2.5s ease-in;
-}
-
-.underscore_ {
-    animation: fadeIn 4s linear, fadeIn 1s ease-in infinite;
-}
-
-/* Fin animación: HOLA_  */
-
-.container_title {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 0 30px;
-}
-
-.hero-section .welcome {
-    font-size: 70pt;
-    font-weight: 800;
-    color: $dark-color;
-    text-align: center;
-}
-
-/* Animación H1 */
 @keyframes slideUp {
     from {
         transform: translateY(100%);
@@ -74,10 +54,6 @@
         transform: translateY(0);
         opacity: 1;
     }
-}
-
-.animation--slideup {
-    animation: slideUp 2.5s ease-in-out;
 }
 
 @keyframes slideDown {
@@ -92,14 +68,47 @@
     }
 }
 
-.animation--slidedown {
-    animation: slideDown 2.5s ease-in-out;
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
 
-/* Fin animación H1. */
+@keyframes changeText {
 
-.hero-section i {
-    color: $dark-color;
+    0%,
+    100% {
+        content: 'A';
+        opacity: 1;
+    }
+
+    25%,
+    50%,
+    75% {
+        opacity: 0;
+    }
+
+    50% {
+        content: 'O';
+        opacity: 1;
+    }
 }
 
-/* End hero section. */
+@media screen and (max-width:800px) {
+    .header__welcome {
+        font-size: 55pt;
+        font-weight: 800;
+    }
+}
+
+
+@media screen and (max-width:600px) {
+    .header__welcome {
+        font-size: 40pt;
+        font-weight: 800;
+    }
+}
