--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -1,20 +1,3 @@
 .main {
-    background-image: url(../img/back.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-
-}
-
-.main__header {
-    font-size: 20px;
-    font-weight: 500;
-    display: inline;
-}
-
-.main__header--h2 {
-    font-size: 18px;
-    font-weight: 500;
-    display: inline;
+    background: rgba(0, 0, 0, 0.55);
 }
