--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $color-bootstrap: #563D7C;
 $color-sass: #cc6699;
 $color-git: #F05033;
 $color-github: #000000;
+$color-node: #5fa04e;
 
 $font-primary-text: "Nunito", sans-serif;
 $font-primary-header: "Orbitron", sans-serif;
