--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,6 +1,7 @@
 body {
     font-family: $font-primary-text;
     color: $color-1;
+    scrollbar-color: $color-HTML $color-vue;
     background-image: url(../img/back.jpg);
     background-size: cover;
     background-position: center;
